# 3D-Audio-Visual-Segmentation

./: .gitignore  README.md  pyproject.toml
docs/: dataset.md  evaluation.md  install.md
src/avs_3d/: aggregate_metrics.py  metrics.py  run_lifting_aisrm.py  run_owodbind.py
src/avs_3d/echosegnet/: sagd_utils.py
src/avs_3d/echosegnet/aisrm/: audio_informed_refinement.py  audio_intensity_map.py
src/avs_3d/echosegnet/audio_informed_gaussian_splatting/: train.py
src/avs_3d/echosegnet/audio_informed_gaussian_splatting/gaussian_renderer/: __init__.py  network_gui.py
src/avs_3d/echosegnet/audio_informed_gaussian_splatting/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
src/avs_3d/echosegnet/audio_informed_gaussian_splatting/utils/: camera_utils.py
src/avs_3d/echosegnet/configs/: owod_bind_config.yaml
src/avs_3d/echosegnet/owod_bind/: utils.py
src/avs_3d/scripts/: run_lifting_aisrm_dataset.sh  train_gaussian_splatting_dataset.sh
src/avs_3d/utils/: plotting_audio_maps.py  vis_utils.py
